# vision

./: .gitignore  BUILD_ORDER.md  CLAUDE.md  README.md  app.py  gui_bridge.py  hardware_acceptance.py  main.py  pyproject.toml  requirements.txt  run_hardware.py  vision-architecture.drawio
.claude/skills/hardware-acceptance/: SKILL.md
.claude/skills/pyspin-doctor/: SKILL.md
.claude/skills/qa-gate/: SKILL.md
.claude/skills/rig-validation/: SKILL.md
assets/: README.md
config/: bfs_u3_16s2c.json  bfs_u3_16s2c.yaml  camera.json
notebooks/: rig_tuning.ipynb
scripts/: check_pyspin_symbols.py
src/vision/: __init__.py  acceptance.py  camera_driver.py  camera_service.py  camera_types.py  centroid_buffer.py  centroid_extraction.py  centroid_types.py  config_loader.py  cueing_system.py  frame_buffers.py  generic_driver.py  image_ops.py  lens.py  opencv_driver.py  queuing_subsystem.py  spinnaker_driver.py  vision_system.py
tests/: _helpers.py  test_acceptance.py  test_app.py  test_camera_service.py  test_config.py  test_drivers_mocked.py  test_frame_buffers.py  test_generic_driver.py  test_gui.py  test_hardware.py  test_lens.py  test_properties.py  test_spinnaker_realsdk.py  test_suite.py
