[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-system"
version = "2.0.0"
description = "Real-time camera backend and frame-serving pipeline (SRS v0.2 implementation)"
readme = "README.md"
# Floor is 3.10: the Spinnaker/PySpin wheels for the BFS-U3-16S2C cap at CPython
# 3.10, so the real-hardware path runs on 3.10. No upper cap — the sim / tests /
# dev tooling run fine on newer CPython (the spinnaker backend just isn't usable
# there, which surfaces as a clean "PySpin not installed").
requires-python = ">=3.10"
license = { text = "Proprietary" }

# Core runtime: camera abstraction, service layer, frame buffers, and the
# OpenCV camera backend. This is the single source of truth for dependencies;
# install with `pip install -e .` (add extras: ".[gui]", ".[dev]", ".[all]").
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.6",
]

[project.optional-dependencies]
# PyQt6 live viewer (gui_bridge.py) — FR-004 / SRS 5.4 visualization.
gui = ["PyQt6>=6.4"]

# YAML camera configs (config_loader.py reads these lazily if present).
yaml = ["PyYAML>=6.0"]

# Test / development + QA tooling.
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
    "hypothesis>=6.0",
    "coverage>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

# Everything pip-installable in one shot: GUI + YAML + test tooling.
# (PySpin is a vendor SDK, not on PyPI — install it separately for real
# BlackFly hardware.)
all = ["vision-system[gui,yaml,dev]"]

# NOTE: the FLIR/Teledyne Spinnaker SDK (PySpin), required by
# spinnaker_driver.py for real BlackFly hardware, is not distributed on PyPI.
# Install it from the vendor SDK package separately.

# src layout: the importable library lives in src/vision/. The entry-point
# scripts (app.py, gui_bridge.py, hardware_acceptance.py) stay at the repo root and
# import the installed `vision` package; they are not packaged themselves.
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120          # fail (don't hang) if a threaded test deadlocks

[tool.ruff]
line-length = 100
extend-exclude = ["Spinnaker", "Spinnaker-Examples-main"]

[tool.ruff.lint.per-file-ignores]
# Test files set sys.path before importing the package (E402) and use compact
# `a; b` setup lines (E702); both are intentional and isolated to tests.
"tests/**" = ["E402", "E702"]

[tool.mypy]
files = ["src/vision", "app.py", "gui_bridge.py", "hardware_acceptance.py"]
ignore_missing_imports = true   # PySpin / cv2 / cupy ship no stubs
